the second commit

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -18,13 +18,13 @@ LFO = $(LFC:.c=.o)
 YFO = $(YFC:.c=.o)
 
 parser: syntax $(filter-out $(LFO),$(OBJS))
-	$(CC) -o parser $(filter-out $(LFO),$(OBJS)) -lfl -ly
+	$(CC) -g -o parser $(filter-out $(LFO),$(OBJS)) -lfl -ly
 
 syntax: lexical syntax-c
-	$(CC) -c $(YFC) -o $(YFO)
+	$(CC) -g -c $(YFC) -o $(YFO)
 
 lexical: $(LFILE)
-	$(FLEX) -o $(LFC) $(LFILE)
+	$(FLEX)  -o $(LFC) $(LFILE)
 
 syntax-c: $(YFILE)
 	$(BISON) -o $(YFC) -d -v $(YFILE)
